codama-macros/tests/codama_attribute/values_nodes/sysvar/no_input.fail.stderr
error: expected a list: `sysvar(...)` or `sysvar = (...)`
 --> tests/codama_attribute/values_nodes/sysvar/no_input.fail.rs:3:26
  |
3 | #[codama(default_value = sysvar)]
  |                          ^^^^^^

error: sysvar_identifier is missing
 --> tests/codama_attribute/values_nodes/sysvar/no_input.fail.rs:6:26
  |
6 | #[codama(default_value = sysvar())]
  |                          ^^^^^^^^
