codama-macros/tests/codama_attribute/values_nodes/sysvar/no_input.fail.rs
use codama_macros::codama;

#[codama(default_value = sysvar)]
pub struct Test;

#[codama(default_value = sysvar())]
pub struct TestWithParenthesis;

fn main() {}
